--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "calcdeps": "~0.1.7",
     "grunt-contrib-clean": "~0.4.0a",
     "grunt-contrib-copy": "~0.3.2",
-    "mocha": "~1.8.1"
+    "mocha": "~1.8.1",
+    "github": "~0.1.8",
+    "q": "~0.9.2"
   },
   "testling": {
     "browsers": [
