--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "grunt-s3": "~0.2.0-alpha",
     "semver": "~1.1.4",
     "grunt-contrib-cssmin": "~0.6.0",
-    "uglify-js": "~2.3.6"
+    "uglify-js": "~2.3.6",
+    "grunt-karma": "~0.4.4",
+    "karma-qunit": "~0.0.2"
   },
   "testling": {
     "browsers": [
