Started on doc generation

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "semver": "~1.1.4",
     "grunt-contrib-cssmin": "~0.6.0",
     "uglify-js": "~2.3.6",
-    "grunt-contrib-less": "~0.6.4"
+    "grunt-contrib-less": "~0.6.4",
+    "markdox": "git://github.com/heff/markdox.git"
   },
   "testling": {
     "browsers": [
