--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "grunt-contrib-cssmin": "~0.6.0",
     "uglify-js": "~2.3.6",
     "grunt-contrib-less": "~0.6.4",
-    "markdox": "git://github.com/heff/markdox.git"
+    "markdox": "git://github.com/heff/markdox.git",
+    "dox": "~0.4.4"
   },
   "testling": {
     "browsers": [
