--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ npm-debug.log
 sandbox/*
 !sandbox/*.example
 
+# ignore any Karma conf.js files in the test/ directory
+test/*.conf.js
+
 *.swp
 *.swo
 
