--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "grunt-contrib-less": "~0.6.4",
     "grunt-karma": "~0.4.4",
     "karma-qunit": "~0.0.2",
-    "videojs-doc-generator": "0.0.1"
+    "videojs-doc-generator": "0.0.1",
+    "grunt-autoprefixer": "~0.4.0"
   },
   "testling": {
     "browsers": [
