--- a/package.json
+++ b/package.json
@@ -24,39 +24,39 @@
     "videojs-swf": "4.4.0"
   },
   "devDependencies": {
-    "grunt-cli": "~0.1.0",
-    "grunt": "~0.4",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-watch": "~0.1.4",
-    "grunt-contrib-qunit": "~0.2.1",
     "calcdeps": "~0.1.7",
-    "grunt-contrib-clean": "~0.4.0a",
-    "grunt-contrib-copy": "~0.3.2",
-    "mocha": "~1.8.1",
+    "chg": "~0.1.8",
     "contribflow": "~0.2.0",
-    "grunt-s3": "~0.2.0-alpha",
-    "semver": "~1.1.4",
+    "github": "~0.1.14",
+    "grunt": "^0.4.4",
+    "grunt-banner": "~0.2.0",
+    "grunt-cli": "~0.1.0",
+    "grunt-contrib-clean": "~0.4.0a",
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-copy": "~0.3.2",
     "grunt-contrib-cssmin": "~0.6.0",
-    "uglify-js": "~2.3.6",
+    "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-less": "~0.6.4",
+    "grunt-contrib-qunit": "~0.2.1",
+    "grunt-contrib-watch": "~0.1.4",
     "grunt-karma": "~0.6.2",
+    "grunt-s3": "~0.2.0-alpha",
+    "grunt-tagrelease": "~0.3.3",
+    "grunt-version": "~0.3.0",
+    "grunt-zip": "0.10.2",
     "karma": "~0.10.0",
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
     "karma-ie-launcher": "~0.1.1",
     "karma-opera-launcher": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.1",
-    "karma-safari-launcher": "~0.1.1",
     "karma-qunit": "~0.1.1",
-    "videojs-doc-generator": "0.0.1",
-    "qunitjs": "~1.12.0",
-    "grunt-zip": "0.10.2",
-    "grunt-banner": "~0.2.0",
-    "chg": "~0.1.8",
-    "grunt-tagrelease": "~0.3.3",
-    "github": "~0.1.14",
+    "karma-safari-launcher": "~0.1.1",
+    "mocha": "~1.8.1",
     "open": "0.0.4",
-    "grunt-version": "~0.3.0"
+    "qunitjs": "~1.12.0",
+    "semver": "~1.1.4",
+    "uglify-js": "~2.3.6",
+    "videojs-doc-generator": "0.0.1"
   }
 }
