add sauce encrypted values

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: node_js
 node_js:
-  - 0.8
+- 0.10
+before_script:
+- curl https://gist.githubusercontent.com/santiycr/5139565/raw/sauce_connect_setup.sh
+env:
+  global:
+  - secure: T+xpJN6kMMM/xV6K+sd9vKxPA2KhoUS05d8Em090fhpMdXmuXN4MwfhgLca5IFkMyXA/psf9E7IcXCWwtO2+exPpvhMIWN/z6ls+jtjP+6eRHU69GZK+Gc4rrJMtBbpuam5ItMPuhRoF1GSA/mvPmivGbbi4B78NvsPj+QEJ0us=
+  - secure: MoAXlLm4EnXpSsUGlXct7su3o2sIdoGBfFK8XaWPalnk2MQJMkieFu5xWQkduYVKFBPRqilg1+SYidc8fMHsEGBZ5yJIZAIonZfj7FEbNYhxCtZ9VuY6cIHHM61ikWWubx5ISqHALNiUjUfbV0R+mT7lUo/yCcG25uVgNhuJ42Y=
