Update karma dependencies. Add karma-sauce-launcher

--- a/package.json
+++ b/package.json
@@ -39,19 +39,20 @@
     "grunt-contrib-less": "~0.6.4",
     "grunt-contrib-qunit": "~0.2.1",
     "grunt-contrib-watch": "~0.1.4",
-    "grunt-karma": "~0.6.2",
+    "grunt-karma": "^0.8.3",
     "grunt-s3": "~0.2.0-alpha",
     "grunt-tagrelease": "~0.3.3",
     "grunt-version": "~0.3.0",
     "grunt-zip": "0.10.2",
-    "karma": "~0.10.0",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-ie-launcher": "~0.1.1",
+    "karma": "^0.12.14",
+    "karma-chrome-launcher": "^0.1.3",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-ie-launcher": "^0.1.5",
     "karma-opera-launcher": "~0.1.0",
-    "karma-phantomjs-launcher": "~0.1.1",
-    "karma-qunit": "~0.1.1",
-    "karma-safari-launcher": "~0.1.1",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-qunit": "^0.1.1",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-sauce-launcher": "^0.2.8",
     "mocha": "~1.8.1",
     "open": "0.0.4",
     "qunitjs": "~1.12.0",
