--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ node_js:
 - 0.10
 before_script:
 - curl https://gist.githubusercontent.com/santiycr/5139565/raw/sauce_connect_setup.sh | bash
+notifications:
+  irc:
+    channels:
+      - "chat.freenode.net#videojs"
+    use_notice: true
 env:
   global:
   - secure: K6JpKwMkfNaJix3Bb0tLjVMzHMJgtBXdd/dvfw1BMb9DCBpd81PqXbDs7yXCddUxnUPTBPxZCrQgWsw71Wn+qEoIG5MU3uOT5A2rBbx/yZonVAGv5ed/9w0xk0OzO383CmPMFqwqtp9YmdmqGjQBkYXVXJjTvNTOAExFSdhO+3U=
