--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
     "karma-qunit": "^0.1.1",
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.8",
+    "karma-sinon": "^1.0.3",
     "mocha": "~1.8.1",
     "open": "0.0.4",
     "qunitjs": "~1.12.0",
     "semver": "~1.1.4",
+    "sinon": "~1.9.1",
     "uglify-js": "~2.3.6",
-    "videojs-doc-generator": "0.0.1",
-    "sinon": "~1.9.1"
+    "videojs-doc-generator": "0.0.1"
   }
 }
