--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "grunt-contrib-cssmin": "~0.6.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-less": "~0.6.4",
-    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-qunit": "~0.2.1",
+    "grunt-contrib-sass": "^0.8.1",
+	"grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "~0.1.4",
     "grunt-coveralls": "^1.0.0",
     "grunt-exorcise": "^1.0.1",
