--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "main": "./dist/video-js/video.js",
   "dependencies": {
-    "videojs-swf": "4.5.3"
+    "videojs-swf": "4.5.3",
+    "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#shim-build"
   },
   "devDependencies": {
     "calcdeps": "~0.1.7",
