--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-less": "~0.6.4",
     "grunt-contrib-qunit": "~0.2.1",
+    "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "~0.1.4",
     "grunt-fastly": "^0.1.3",
     "grunt-github-releaser": "^0.1.17",
