Starting ES6 conversion up to functional player

--- a/package.json
+++ b/package.json
@@ -26,19 +26,22 @@
     "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#shim-build"
   },
   "devDependencies": {
+    "babelify": "^5.0.4",
     "calcdeps": "~0.1.7",
     "chg": "~0.2.0",
     "contribflow": "~0.2.0",
     "github": "~0.1.14",
+    "global": "^4.3.0",
     "grunt": "^0.4.4",
     "grunt-aws-s3": "^0.12.1",
     "grunt-banner": "~0.2.0",
+    "grunt-browserify": "^3.5.0",
     "grunt-cli": "~0.1.0",
     "grunt-contrib-clean": "~0.4.0a",
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-copy": "~0.3.2",
     "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-less": "~0.6.4",
     "grunt-contrib-qunit": "~0.2.1",
     "grunt-contrib-uglify": "^0.8.0",
@@ -51,6 +54,7 @@
     "grunt-videojs-languages": "0.0.4",
     "grunt-zip": "0.10.2",
     "karma": "^0.12.14",
+    "karma-browserify": "^4.0.0",
     "karma-chrome-launcher": "^0.1.3",
     "karma-firefox-launcher": "^0.1.3",
     "karma-ie-launcher": "^0.1.5",
