@heff replaced Closure Compiler with Uglify for minification. closes #1940

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "video.js",
   "description": "An HTML5 and Flash video player with a common API and skin for both.",
   "version": "4.12.4",
-  "copyright": "Copyright 2014 Brightcove, Inc. https://github.com/videojs/video.js/blob/master/LICENSE",
+  "copyright": "Copyright Brightcove, Inc. <https://www.brightcove.com/>",
+  "license": "Apache-2.0",
   "keywords": [
     "videojs",
     "html5",
@@ -40,6 +41,7 @@
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-less": "~0.6.4",
     "grunt-contrib-qunit": "~0.2.1",
+    "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "~0.1.4",
     "grunt-fastly": "^0.1.3",
     "grunt-github-releaser": "^0.1.17",
