--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-copy": "~0.3.2",
     "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-less": "~0.6.4",
     "grunt-contrib-qunit": "~0.2.1",
     "grunt-contrib-uglify": "^0.8.0",
