Report test coverage analytics during test runs

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "babelify": "^5.0.4",
+    "blanket": "^1.1.6",
+    "browserify-istanbul": "^0.2.1",
     "calcdeps": "~0.1.7",
     "chg": "~0.2.0",
     "contribflow": "~0.2.0",
@@ -46,6 +48,7 @@
     "grunt-contrib-qunit": "~0.2.1",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "~0.1.4",
+    "grunt-coveralls": "^1.0.0",
     "grunt-fastly": "^0.1.3",
     "grunt-github-releaser": "^0.1.17",
     "grunt-karma": "^0.8.3",
@@ -56,6 +59,7 @@
     "karma": "^0.12.14",
     "karma-browserify": "^4.0.0",
     "karma-chrome-launcher": "^0.1.3",
+    "karma-coverage": "^0.2.7",
     "karma-firefox-launcher": "^0.1.3",
     "karma-ie-launcher": "^0.1.5",
     "karma-opera-launcher": "~0.1.0",
