More build and testing cleanup. Also some reorganization.

--- a/package.json
+++ b/package.json
@@ -20,39 +20,36 @@
     "type": "git",
     "url": "https://github.com/videojs/video.js.git"
   },
-  "main": "./dist/video-js/video.js",
+  "main": "src/js/video.js",
   "dependencies": {
     "videojs-swf": "4.5.4",
-    "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#shim-build"
+    "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#shim-build",
+    "global": "^4.3.0"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
     "blanket": "^1.1.6",
     "browserify-istanbul": "^0.2.1",
-    "calcdeps": "~0.1.7",
+    "browserify-versionify": "^1.0.4",
     "chg": "~0.2.0",
-    "contribflow": "~0.2.0",
-    "github": "~0.1.14",
-    "global": "^4.3.0",
     "grunt": "^0.4.4",
     "grunt-aws-s3": "^0.12.1",
-    "grunt-banner": "~0.2.0",
     "grunt-browserify": "^3.5.0",
     "grunt-cli": "~0.1.0",
     "grunt-contrib-clean": "~0.4.0a",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-copy": "~0.3.2",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "~0.6.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-less": "~0.6.4",
-    "grunt-contrib-qunit": "~0.2.1",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "~0.1.4",
     "grunt-coveralls": "^1.0.0",
+    "grunt-exorcise": "^1.0.1",
     "grunt-fastly": "^0.1.3",
     "grunt-github-releaser": "^0.1.17",
     "grunt-karma": "^0.8.3",
-    "grunt-s3": "~0.2.0-alpha",
     "grunt-version": "~0.3.0",
     "grunt-videojs-languages": "0.0.4",
     "grunt-zip": "0.10.2",
@@ -68,8 +65,6 @@
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.8",
     "karma-sinon": "^1.0.3",
-    "mocha": "~1.8.1",
-    "open": "0.0.4",
     "qunitjs": "~1.14.0",
     "sinon": "~1.9.1",
     "uglify-js": "~2.3.6",
