--- a/sandbox/plugin.html.example
+++ b/sandbox/plugin.html.example
@@ -4,10 +4,10 @@
   <meta charset="utf-8" />
   <title>Video.js Plugin Example</title>
 
-  <link href="../build/files/video-js.css" rel="stylesheet" type="text/css">
+  <link href="../build/temp/video-js.css" rel="stylesheet" type="text/css">
 
   <!-- LOAD VIDEO.JS SOURCE FILES IN ORDER -->
-  <script src="../build/source-loader.js"></script>
+  <script src="../build/temp/video.js"></script>
 
 </head>
 <body>
