--- a/package.json
+++ b/package.json
@@ -44,14 +44,15 @@
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-less": "~0.6.4",
     "grunt-contrib-qunit": "~0.2.1",
-    "grunt-contrib-sass": "^0.8.1",
-	"grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "~0.1.4",
     "grunt-coveralls": "^1.0.0",
     "grunt-exorcise": "^1.0.1",
     "grunt-fastly": "^0.1.3",
     "grunt-github-releaser": "^0.1.17",
     "grunt-karma": "^0.8.3",
+    "grunt-s3": "~0.2.0-alpha",
+    "grunt-sass": "^0.18.1",
     "grunt-version": "~0.3.0",
     "grunt-videojs-languages": "0.0.4",
     "grunt-zip": "0.10.2",
