Removing the test event helper and simply testing against an object in Events.trigger. fixes #2024

--- a/.jshintrc
+++ b/.jshintrc
@@ -16,11 +16,13 @@
         "_V_",
         "goog",
         "console",
+
         "require",
         "define",
         "module",
         "exports",
         "process",
+
         "q",
         "asyncTest",
         "deepEqual",
@@ -37,7 +39,6 @@
         "stop",
         "strictEqual",
         "test",
-        "sinon",
-        "MouseEvent"
+        "sinon"
     ]
 }
