--- a/sandbox/icons.html.example
+++ b/sandbox/icons.html.example
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>Video.js Icons Sandbox</title>
 
-  <link href="../build/files/video-js.css" rel="stylesheet" type="text/css">
+  <link href="../build/temp/video-js.css" rel="stylesheet" type="text/css">
 
   <style>
   .icon-list li span { font-size: 150% }
