--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "video.js",
   "description": "An HTML5 and Flash video player with a common API and skin for both.",
-  "version": "4.12.5",
+  "version": "5.0.0-0",
   "copyright": "Copyright Brightcove, Inc. <https://www.brightcove.com/>",
   "license": "Apache-2.0",
   "keywords": [
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "https://github.com/videojs/video.js.git"
   },
-  "main": "./dist/video.min.js",
+  "main": "./dist/video.js",
   "dependencies": {
     "global": "^4.3.0",
     "safe-json-parse": "^4.0.0",
