--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "qunitjs": "~1.14.0",
     "sinon": "~1.9.1",
     "uglify-js": "~2.3.6",
-    "videojs-doc-generator": "0.0.1"
+    "videojs-doc-generator": "0.0.1",
+    "videojs-standard": "^3.7.3"
   }
 }
