--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.8",
     "karma-sinon": "^1.0.3",
+    "load-grunt-tasks": "^3.1.0",
     "qunitjs": "~1.14.0",
     "sinon": "~1.9.1",
+    "time-grunt": "^1.1.1",
     "uglify-js": "~2.3.6",
     "videojs-doc-generator": "0.0.1"
   }
