--- a/package.json
+++ b/package.json
@@ -76,5 +76,16 @@
     "uglify-js": "~2.3.6",
     "videojs-doc-generator": "0.0.1",
     "videojs-standard": "^3.7.3"
+  },
+  "standard": {
+    "ignore": [
+      "**/build/**",
+      "**/dist/**",
+      "**/docs/**",
+      "**/lang/**",
+      "**/sandbox/**",
+      "**/test/**",
+      "**/Gruntfile.js"
+    ]
   }
 }
