--- a/sandbox/index.html.example
+++ b/sandbox/index.html.example
@@ -10,7 +10,11 @@
 
   <!-- Set the location of the flash SWF -->
   <script>
-    videojs.options.flash.swf = '../build/temp/video-js.swf';
+    videojs.setGlobalOptions({
+      flash: {
+        swf: '../build/temp/video-js.swf'
+      }
+    });
   </script>
 
 </head>
