--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   "style": "./dist/video-js.css",
   "dependencies": {
     "global": "^4.3.0",
+    "lodash.clonedeep": "^3.0.0",
+    "lodash.isplainobject": "^3.0.2",
+    "lodash.merge": "^3.2.1",
+    "object.assign": "^2.0.1",
     "safe-json-parse": "^4.0.0",
-    "inherits": "^2.0.1",
     "videojs-swf": "4.5.4",
     "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#shim-build"
   },
@@ -41,7 +44,7 @@
     "grunt": "^0.4.4",
     "grunt-aws-s3": "^0.12.1",
     "grunt-banner": "^0.3.1",
-    "grunt-browserify": "^3.5.0",
+    "grunt-browserify": "3.5.1",
     "grunt-cli": "~0.1.0",
     "grunt-contrib-clean": "~0.4.0a",
     "grunt-contrib-concat": "^0.5.1",
