build: bower.json: remove moot `version` field
Per https://github.com/bower/bower.json-spec/commit/a325da3d79baab018c572d75dc1781b12322f6cd

closes #2144

bower.json: main: fix path to video.js

bower.json: main: video-js.css => video-js.scss

Per https://github.com/bower/bower.json-spec/pull/43 :
> Use source files with module exports and imports over pre-built distribution files.

Also, the example in that PR includes
/sass/motion.scss in and excludes
/dist/movement.css & /dist/movement.min.css
from its `main`.

bower.json: Set moduleType & use non-dist video.js

Again, see https://github.com/bower/bower.json-spec/pull/43

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "video.js",
   "description": "An HTML5 and Flash video player with a common API and skin for both.",
-  "version": "5.0.0-15",
   "main": [
-    "dist/video-js/video.js",
-    "dist/video-js/video-js.css"
+    "src/js/video.js",
+    "src/css/video-js.scss"
   ],
+  "moduleType": "es6",
   "keywords": [
     "videojs",
     "html5",
