--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "video.js",
   "description": "An HTML5 and Flash video player with a common API and skin for both.",
   "main": [
-    "dist/video-js/video.js",
+    "dist/video.js",
     "dist/video-js/video-js.css"
   ],
   "keywords": [
