--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "An HTML5 and Flash video player with a common API and skin for both.",
   "main": [
     "dist/video.js",
-    "dist/video-js/video-js.css"
+    "src/css/video-js.scss"
   ],
   "keywords": [
     "videojs",
