--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,10 @@
   "name": "video.js",
   "description": "An HTML5 and Flash video player with a common API and skin for both.",
   "main": [
-    "dist/video.js",
+    "src/js/video.js",
     "src/css/video-js.scss"
   ],
+  "moduleType": "es6",
   "keywords": [
     "videojs",
     "html5",
