--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "sinon": "~1.9.1",
     "time-grunt": "^1.1.1",
     "uglify-js": "~2.3.6",
-    "videojs-doc-generator": "0.0.1"
+    "videojs-doc-generator": "0.0.1",
+    "videojs-font": "^1.1.0"
   },
   "standard": {
     "ignore": [
