--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lodash-compat": "^3.9.3",
     "object.assign": "^2.0.1",
     "safe-json-parse": "^4.0.0",
+    "videojs-font": "1.2.0",
+    "videojs-ie8": "1.1.0",
     "videojs-swf": "4.7.0",
     "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#shim-build"
   },
@@ -80,8 +82,7 @@
     "sinon": "~1.9.1",
     "time-grunt": "^1.1.1",
     "uglify-js": "~2.3.6",
-    "videojs-doc-generator": "0.0.1",
-    "videojs-font": "^1.1.0"
+    "videojs-doc-generator": "0.0.1"
   },
   "standard": {
     "ignore": [
