--- a/sandbox/plugin.html.example
+++ b/sandbox/plugin.html.example
@@ -4,10 +4,21 @@
   <meta charset="utf-8" />
   <title>Video.js Plugin Example</title>
 
-  <link href="../build/temp/video-js.css" rel="stylesheet" type="text/css">
+  <!-- Add ES5 shim and sham for IE8 -->
+  <script src="../build/temp/ie8/videojs-ie8.js"></script>
 
-  <!-- LOAD VIDEO.JS SOURCE FILES IN ORDER -->
+  <!-- Load the source files -->
+  <link href="../build/temp/video-js.css" rel="stylesheet" type="text/css">
   <script src="../build/temp/video.js"></script>
+
+  <!-- Set the location of the flash SWF -->
+  <script>
+    videojs.setGlobalOptions({
+      flash: {
+        swf: '../build/temp/video-js.swf'
+      }
+    });
+  </script>
 
 </head>
 <body>
