--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "main": "./dist/video-js/video.js",
   "dependencies": {
     "videojs-swf": "4.7.2",
-    "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#shim-build"
+    "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#vjs-v0.12.1"
   },
   "devDependencies": {
     "calcdeps": "~0.1.7",
