--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "videojs-font": "1.3.0",
     "videojs-ie8": "1.1.0",
     "videojs-swf": "4.7.1",
-    "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#shim-build"
+    "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#vjs-v0.12.1"
   },
   "devDependencies": {
     "babel": "^5.2.2",
