--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "safe-json-parse": "^4.0.0",
     "videojs-font": "1.3.0",
     "videojs-ie8": "1.1.0",
-    "videojs-swf": "4.7.1",
+    "videojs-swf": "5.0.0-rc0",
     "vtt.js": "git+https://github.com/gkatsev/vtt.js.git#vjs-v0.12.1"
   },
   "devDependencies": {
