--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "grunt-zip": "0.10.2",
     "karma": "^0.12.36",
     "karma-browserify": "^4.0.0",
+    "karma-browserstack-launcher": "^0.1.4",
     "karma-chrome-launcher": "^0.1.3",
     "karma-coverage": "^0.4.0",
     "karma-firefox-launcher": "^0.1.3",
@@ -76,7 +77,6 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-qunit": "^0.1.2",
     "karma-safari-launcher": "^0.1.1",
-    "karma-sauce-launcher": "^0.2.8",
     "karma-sinon": "^1.0.3",
     "load-grunt-tasks": "^3.1.0",
     "qunitjs": "^1.18.0",
